# thinformer

./: .gitignore  .pre-commit-config.yaml  README.md  SUPPORT.md  pyproject.toml
examples/longbench/: README.md  benchmark_patch_llm.py  benchmark_single_attention.py
examples/longbench/models/attention/: modeling_chatglm_fast_attention.py
examples/t2t/: README.md  accuracy.py  environment-scatter.yml  environment.yml  extract_ILSVRC.sh  format_acc_and_time.py  format_accuracy.py  format_runtime.py  helpers.py  imagenet.py  runtime.py  util_experiments.py
examples/t2t/model/: attn_cfgs.py  t2t.py  t2t_vit.py  token_transformer.py
examples/t2t/model/attention/: full_attention.py  kdeformer.py  reformer.py
examples/t2t/model/attention/performer/: README.md  __init__.py  performer_attention.py
examples/t2t/model/attention/scatterbrain/: README.md  __init__.py  feature_maps_sb.py  sblocal_attention.py
examples/t2t/slurm/: accuracy.slurm  runtime.slurm
thinformer/: __init__.py  thinformer.py
